--- a/README
+++ b/README
@@ -59,4 +59,4 @@ That's it, your question & answer website is ready to go!
 Found bug(s)?
 -------------
 
-Please submit bugs or feature requests to Github.
+Please submit bugs (https://github.com/serdary/qamini/issues) or feature requests to Github.
