--- a/README
+++ b/README
@@ -4,14 +4,14 @@ Qamini - Open Source Mini Question & Answer Software
 Author: Serdar Yildirim // me[dot]serdaryildirim[dot]com
 Website: www.qamini.com
 Demo Website: www.qamini.com/qa
-Current version: 0.4
+Current version: 0.5
 
 
 Qamini Description
 ------------------
 
 Qamini is an open source question & answer software developed with MySql, PHP 5 and Kohana 3.1 MVC Framework.
-Main concern is simplicity, so there is no lots of extra features like thumbnails, post revisions or badges.
+Main concern is simplicity, so there is no lots of extra features like thumbnails, post revisions.
 
 Qamini is themable, including all views, static files such as javascripts, stylesheets and images.
 
@@ -29,6 +29,7 @@ Current features
 * Tags
 * Internationalization Support
 * Content Management System for Posts, Users, Settings, Tags, Spam Management and more..
+* Badges. (Predefined and admin defined badges.)
 
 
 Installation
