--- a/README
+++ b/README
@@ -36,7 +36,7 @@ Installation
 ------------
 
 * Download qamini source codes.
-* Download latest version of kohana 3 (http://kohanaframework.org/) and copy all files under kohana/system to qamini/system.
+* Download latest version of kohana 3 (http://kohanaframework.org/) and copy all files under kohana/system to qamini/system. (NOTE: Latest tested Kohana version is: 3.1.x)
 * Copy kohana install.php file to /qamini and upload all files to your server.
 * Open your website and make sure your environment passes all tests.
 Remember, after your environment is ready, you need to rename or remove install.php file.
